force-app/main/default/objects/ConfiguracoesDeNegocio__c/ConfiguracoesDeNegocio__c.object-meta.xml
<CustomObject>
    <label>Configurações de Negócio</label>
    <nameField>
        <label>Nome de Configurações de Negócio</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configurações de Negócio</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>