force-app/main/default/objects/ConfiguracoesDeNegocio__c/fields/FaseParaRedirecionamentoDoLead__c.field-meta.xml
<CustomField>
    <fullName>FaseParaRedirecionamentoDoLead__c</fullName>
    <label>Fase para redirecionamento do Lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Descartado</fullName>
            </value>
            <value>
                <fullName>Novo</fullName>
            </value>
            <value>
                <fullName>Nutrindo</fullName>
            </value>
            <value>
                <fullName>Tentativa de contato</fullName>
            </value>
            <value>
                <fullName>Contato Realizado</fullName>
            </value>
            <value>
                <fullName>Agendamento de Visita</fullName>
            </value>
            <value>
                <fullName>Qualificação</fullName>
            </value>
            <value>
                <fullName>Conversão</fullName>
            </value>
            <value>
                <fullName>Lead Perdido(não trabalho)</fullName>
            </value>
            <value>
                <fullName>Convertido</fullName>
                <isActive>false</isActive>
                <label>Convertido</label>
            </value>
            <value>
                <fullName>Lead Perdido</fullName>
                <isActive>false</isActive>
                <label>Lead Perdido</label>
            </value>
            <value>
                <fullName>Não Qualificado</fullName>
                <isActive>false</isActive>
                <label>Não Qualificado</label>
            </value>
            <value>
                <fullName>Prospecção</fullName>
                <isActive>false</isActive>
                <label>Prospecção</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>