force-app/main/default/objects/ConfiguracoesDeNegocio__c/fields/tempoLimiteParaFarolAmarelo__c.field-meta.xml
<CustomField>
    <fullName>tempoLimiteParaFarolAmarelo__c</fullName>
    <inlineHelpText>Duração do tempo para alcançar o próximo semáforo em minutos</inlineHelpText>
    <label>Tempo limite para farol amarelo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>