force-app/main/default/objects/ConfiguracoesDeNegocio__c/recordTypes/controleSLA.recordType-meta.xml
<RecordType>
    <fullName>controleSLA</fullName>
    <active>true</active>
    <label>Controle SLA</label>
</RecordType>